Migrating to slot annotations, adding missing @Overrides annotations, adding generics