@@ -3,26 +3,52 @@
 // Licensed under the Academic Free License version 3.0
 //
 // History:
-//   04 Feb 2015  Mike Jarmy  Creation
+//   04 Feb 2015  Mike Jarmy     Creation
+//   10 May 2018  Eric Anderson  Added missing @Overrides annotations, added use of generics
 //
 package nhaystack.server;
 
-import java.util.*;
-import java.util.logging.*;
-
-import javax.baja.control.*;
-import javax.baja.control.enums.*;
-import javax.baja.fox.*;
-import javax.baja.naming.*;
-import javax.baja.schedule.*;
-import javax.baja.security.*;
-import javax.baja.status.*;
-import javax.baja.sys.*;
-
-import org.projecthaystack.*;
-
-import nhaystack.*;
-import nhaystack.util.*;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+import javax.baja.control.BBooleanWritable;
+import javax.baja.control.BControlPoint;
+import javax.baja.control.BEnumWritable;
+import javax.baja.control.BIWritablePoint;
+import javax.baja.control.BNumericWritable;
+import javax.baja.control.BStringWritable;
+import javax.baja.control.enums.BPriorityLevel;
+import javax.baja.fox.BFoxProxySession;
+import javax.baja.naming.BOrd;
+import javax.baja.schedule.BWeeklySchedule;
+import javax.baja.security.PermissionException;
+import javax.baja.status.BStatus;
+import javax.baja.status.BStatusBoolean;
+import javax.baja.status.BStatusEnum;
+import javax.baja.status.BStatusNumeric;
+import javax.baja.status.BStatusString;
+import javax.baja.sys.BComponent;
+import javax.baja.sys.BEnum;
+import javax.baja.sys.BEnumRange;
+import javax.baja.sys.BFacets;
+import javax.baja.sys.BLink;
+import javax.baja.sys.BajaRuntimeException;
+import javax.baja.sys.Context;
+import javax.baja.sys.Flags;
+import nhaystack.BHDict;
+import nhaystack.BHGrid;
+import nhaystack.util.SlotUtil;
+import nhaystack.util.TypeUtil;
+import org.projecthaystack.HBool;
+import org.projecthaystack.HDict;
+import org.projecthaystack.HDictBuilder;
+import org.projecthaystack.HGrid;
+import org.projecthaystack.HGridBuilder;
+import org.projecthaystack.HHisItem;
+import org.projecthaystack.HNum;
+import org.projecthaystack.HStr;
+import org.projecthaystack.HVal;
 
 /**
   * PointIO handles onPointWriteArray() and onPointWrite()
@@ -90,7 +116,7 @@ class PointIO
                     "val:"   + val      + ", " +
                     "who:"   + who      + ", " +
                     "dur:"   + dur      + ", " +
-                    "opts:"   + ((opts == null) ? "null" : opts.toZinc()));
+                    "opts:"  + (opts == null ? "null" : opts.toZinc()));
 
             HHisItem[] schedItems = schedMgr.getOptionsSchedule(opts);
             if (schedItems == null)
@@ -107,7 +133,6 @@ class PointIO
                 else if (comp instanceof BWeeklySchedule)
                 {
                     LOG.fine("ignoring write to " + comp.getSlotPath());
-                    return;
                 }
                 else
                 {
@@ -167,7 +192,7 @@ class PointIO
                 if (!(remote instanceof BIWritablePoint))
                 {
                     LOG.severe("cannot write to " + remote.getSlotPath() + ", it is not writable.");
-                    throw new IllegalStateException("point is not writable: " + remote.getSlotPath().toString());
+                    throw new IllegalStateException("point is not writable: " + remote.getSlotPath());
                 }
                 working = remote;
             }
@@ -182,7 +207,7 @@ class PointIO
                     if (!sn.getStatus().isNull())
                         vals[i] = HNum.make(sn.getValue());
                 }
-                BStatusNumeric sn = (BStatusNumeric) nw.getFallback();
+                BStatusNumeric sn = nw.getFallback();
                 if (!sn.getStatus().isNull())
                     vals[16] = HNum.make(sn.getValue());
             }
@@ -196,7 +221,7 @@ class PointIO
                     if (!sb.getStatus().isNull())
                         vals[i] = HBool.make(sb.getValue());
                 }
-                BStatusBoolean sb = (BStatusBoolean) bw.getFallback();
+                BStatusBoolean sb = bw.getFallback();
                 if (!sb.getStatus().isNull())
                     vals[16] = HBool.make(sb.getValue());
             }
@@ -212,7 +237,7 @@ class PointIO
                             se.getValue().getTag(),
                             service.getTranslateEnums()));
                 }
-                BStatusEnum se = (BStatusEnum) ew.getFallback();
+                BStatusEnum se = ew.getFallback();
                 if (!se.getStatus().isNull())
                     vals[16] = HStr.make(SlotUtil.fromEnum(
                         se.getValue().getTag(),
@@ -228,7 +253,7 @@ class PointIO
                     if (!s.getStatus().isNull())
                         vals[i] = HStr.make(s.getValue());
                 }
-                BStatusString s = (BStatusString) sw.getFallback();
+                BStatusString s = sw.getFallback();
                 if (!s.getStatus().isNull())
                     vals[16] = HStr.make(s.getValue());
             }
@@ -257,7 +282,7 @@ class PointIO
                 if (vals[i] != null)
                     hd.add("val", vals[i]);
 
-                if (who[i].length() > 0)
+                if (!who[i].isEmpty())
                     hd.add("who", who[i]);
 
                 result[i] = hd.toDict();
@@ -274,7 +299,7 @@ class PointIO
     /**
       * return point array for BWeeklySchedule
       */
-    private HGrid doScheduleArray(BWeeklySchedule sched)
+    private static HGrid doScheduleArray(BWeeklySchedule sched)
     {
         return HGrid.EMPTY;
     }
@@ -282,48 +307,48 @@ class PointIO
     /**
       * get the source for each link that is connected to [in1..in16, fallback]
       */
-    private String[] getLinkWho(BControlPoint point)
+    private static String[] getLinkWho(BControlPoint point)
     {
         String[] who = new String[17];
         for (int i = 0; i < 17; i++)
             who[i] = "";
 
         BLink[] links = point.getLinks();
-        for (int i = 0; i < links.length; i++)
+        for (BLink link : links)
         {
-            String target = links[i].getTargetSlot().getName();
-            Integer level = (Integer) POINT_PROP_LEVELS.get(target);
+            String target = link.getTargetSlot().getName();
+            Integer level = POINT_PROP_LEVELS.get(target);
             if (level != null)
             {
-                who[level.intValue()-1] +=
-                    (links[i].getSourceComponent().getSlotPath() + "/" + 
-                     links[i].getSourceSlot().getName());
+                who[level.intValue() - 1] +=
+                    link.getSourceComponent().getSlotPath() + "/" +
+                    link.getSourceSlot().getName();
             }
         }
 
         return who;
     }
 
-    private static Map POINT_PROP_LEVELS = new HashMap();
+    private static final Map<String, Integer> POINT_PROP_LEVELS = new HashMap<>();
     static
     {
-        POINT_PROP_LEVELS.put("in1",  new Integer(1));
-        POINT_PROP_LEVELS.put("in2",  new Integer(2));
-        POINT_PROP_LEVELS.put("in3",  new Integer(3));
-        POINT_PROP_LEVELS.put("in4",  new Integer(4));
-        POINT_PROP_LEVELS.put("in5",  new Integer(5));
-        POINT_PROP_LEVELS.put("in6",  new Integer(6));
-        POINT_PROP_LEVELS.put("in7",  new Integer(7));
-        POINT_PROP_LEVELS.put("in8",  new Integer(8));
-        POINT_PROP_LEVELS.put("in9",  new Integer(9));
-        POINT_PROP_LEVELS.put("in10", new Integer(10));
-        POINT_PROP_LEVELS.put("in11", new Integer(11));
-        POINT_PROP_LEVELS.put("in12", new Integer(12));
-        POINT_PROP_LEVELS.put("in13", new Integer(13));
-        POINT_PROP_LEVELS.put("in14", new Integer(14));
-        POINT_PROP_LEVELS.put("in15", new Integer(15));
-        POINT_PROP_LEVELS.put("in16", new Integer(16));
-        POINT_PROP_LEVELS.put("fallback", new Integer(17));
+        POINT_PROP_LEVELS.put("in1",  Integer.valueOf(1));
+        POINT_PROP_LEVELS.put("in2",  Integer.valueOf(2));
+        POINT_PROP_LEVELS.put("in3",  Integer.valueOf(3));
+        POINT_PROP_LEVELS.put("in4",  Integer.valueOf(4));
+        POINT_PROP_LEVELS.put("in5",  Integer.valueOf(5));
+        POINT_PROP_LEVELS.put("in6",  Integer.valueOf(6));
+        POINT_PROP_LEVELS.put("in7",  Integer.valueOf(7));
+        POINT_PROP_LEVELS.put("in8",  Integer.valueOf(8));
+        POINT_PROP_LEVELS.put("in9",  Integer.valueOf(9));
+        POINT_PROP_LEVELS.put("in10", Integer.valueOf(10));
+        POINT_PROP_LEVELS.put("in11", Integer.valueOf(11));
+        POINT_PROP_LEVELS.put("in12", Integer.valueOf(12));
+        POINT_PROP_LEVELS.put("in13", Integer.valueOf(13));
+        POINT_PROP_LEVELS.put("in14", Integer.valueOf(14));
+        POINT_PROP_LEVELS.put("in15", Integer.valueOf(15));
+        POINT_PROP_LEVELS.put("in16", Integer.valueOf(16));
+        POINT_PROP_LEVELS.put("fallback", Integer.valueOf(17));
     }
   
     /**
@@ -353,7 +378,7 @@ class PointIO
     private static HGrid saveLastWriteToGrid(HGrid grid, int level, String who)
     {
         // store rows by level
-        Map map = new HashMap();
+        Map<HVal, HDict> map = new HashMap<>();
         for (int i = 0; i < grid.numRows(); i++)
         {
             HDict row = grid.row(i);
@@ -370,9 +395,8 @@ class PointIO
         // create new grid
         HDict[] dicts = new HDict[map.size()];
         int n = 0;
-        Iterator it = map.values().iterator();
-        while (it.hasNext())
-            dicts[n++] = (HDict) it.next();
+        for (HDict hDict : map.values())
+            dicts[n++] = hDict;
 
         return HGridBuilder.dictsToGrid(dicts);
     }
@@ -447,7 +471,7 @@ class PointIO
     /**
       * onControlPointWriteLevel
       */
-    private void onControlPointWriteLevel(
+    private static void onControlPointWriteLevel(
         BControlPoint point, /*BFacets facets,*/
         int level, HVal val, String who)
     {
